--- a/glide.yaml
+++ b/glide.yaml
@@ -2,6 +2,7 @@ package: github.com/k8sdb/memcached
 import:
 - package: github.com/appscode/go
 - package: github.com/appscode/kutil
+  version: release-5.0
 - package: github.com/appscode/pat
 - package: github.com/coreos/prometheus-operator
   repo: https://github.com/appscode/prometheus-operator.git
