--- a/glide.yaml
+++ b/glide.yaml
@@ -11,7 +11,7 @@ import:
   vcs: git
   version: client-go-5
 - package: github.com/kubedb/apimachinery
-  version: master
+  version: 0.8.0-beta.0
 - package: github.com/prometheus/common
   version: 3233b24a36715a2fe36d162260457857a56d672d
 - package: github.com/sirupsen/logrus
@@ -24,16 +24,16 @@ import:
   version: kubernetes-1.8.3
 - package: k8s.io/apimachinery
   repo: https://github.com/tamalsaha/apimachinery.git
-  version: release-1.8
   vcs: git
+  version: release-1.8
 - package: k8s.io/client-go
   version: kubernetes-1.8.3
 - package: k8s.io/apiextensions-apiserver
   version: release-1.8
 - package: k8s.io/kubernetes
   repo: https://github.com/appscode/kubernetes.git
-  version: v1.8.3
   vcs: git
+  version: v1.8.3
 - package: github.com/hashicorp/go-version
   repo: https://github.com/appscode/go-version.git
   vcs: git
