--- a/glide.yaml
+++ b/glide.yaml
@@ -11,7 +11,7 @@ import:
   vcs: git
   version: client-go-5
 - package: github.com/kubedb/apimachinery
-  version: 0.8.0-beta.0
+  version: master
 - package: github.com/prometheus/common
   version: 3233b24a36715a2fe36d162260457857a56d672d
 - package: github.com/sirupsen/logrus
