--- a/glide.yaml
+++ b/glide.yaml
@@ -7,9 +7,7 @@ import:
   version: master
 - package: github.com/appscode/pat
 - package: github.com/coreos/prometheus-operator
-  repo: https://github.com/appscode/prometheus-operator.git
-  vcs: git
-  version: client-go-5
+  version: v0.16.0
 - package: github.com/kubedb/apimachinery
   version: master
 - package: github.com/prometheus/common
