--- a/hack/dev/validating-webhook.yaml
+++ b/hack/dev/validating-webhook.yaml
@@ -1,16 +1,16 @@
 apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
-  name: admission.kubedb.com
+  name: validators.kubedb.com
   labels:
     app: kubedb
 webhooks:
-- name: memcached.admission.kubedb.com
+- name: memcached.validators.kubedb.com
   clientConfig:
     service:
       namespace: default
       name: kubernetes
-      path: /apis/admission.kubedb.com/v1alpha1/memcachedvalidationreviews
+      path: /apis/validators.kubedb.com/v1alpha1/memcacheds
     caBundle: ${KUBE_CA}
   rules:
   - apiGroups: ["kubedb.com"]
@@ -18,12 +18,12 @@ webhooks:
     resources: ["memcacheds"]
     operations: ["CREATE", "UPDATE", "DELETE"]
   failurePolicy: Fail
-- name: dormantdatabase.admission.kubedb.com
+- name: dormantdatabase.validators.kubedb.com
   clientConfig:
     service:
       namespace: default
       name: kubernetes
-      path: /apis/admission.kubedb.com/v1alpha1/dormantdatabasereviews
+      path: /apis/validators.kubedb.com/v1alpha1/dormantdatabases
     caBundle: ${KUBE_CA}
   rules:
   - apiGroups: ["kubedb.com"]
