--- a/glide.yaml
+++ b/glide.yaml
@@ -8,7 +8,7 @@ import:
   version: v0.20.0
 - package: github.com/jpillora/go-ogle-analytics
 - package: github.com/kubedb/apimachinery
-  version: 0.8.0
+  version: usrEnv
 - package: github.com/onsi/ginkgo
   version: v1.5.0
 - package: github.com/onsi/gomega
