Use kmodules monitoring and objectstore ap (#49)

--- a/glide.yaml
+++ b/glide.yaml
@@ -37,9 +37,15 @@ import:
   version: kubernetes-1.11.0
 - package: github.com/appscode/kutil
   version: release-8.0
-- package: github.com/appscode/kube-mon
-  version: release-8.0
 - package: github.com/appscode/kubernetes-webhook-util
+  version: release-8.0
+- package: kmodules.xyz/monitoring-agent-api
+  repo: https://github.com/kmodules/monitoring-agent-api.git
+  vcs: git
+  version: release-8.0
+- package: kmodules.xyz/objectstore-api
+  repo: https://github.com/kmodules/objectstore-api.git
+  vcs: git
   version: release-8.0
 - package: github.com/openshift/api
   version: 31a7bbd2266d178da3c12bb83f5274d387f775e6
