Add support for running tests on cncf cluster (#56)
* remove concourse scripts from repo root
* update pipeline to support for cncf cluster
* trigger tests of user is from kubedb org

--- a/hack/concourse/pipeline.yml
+++ b/hack/concourse/pipeline.yml
@@ -68,6 +68,23 @@ resources:
     secret_access_key: ((s3-secret))
     versioned_file: creds.zip
 
+- name: cncf
+  type: pull-request
+  source:
+    owner: kubedb
+    repo: memcached
+    label: ok-to-test/cncf
+    org: appscode
+    access_token: ((access_token))
+
+- name: concourse-locks
+  type: pool
+  source:
+    uri: git@github.com:kubedb/concourse-locks.git
+    branch: master
+    pool: kubedb
+    private_key: ((private_key))
+
 jobs:
 - name: test-memcached-master
   plan:
@@ -76,13 +93,56 @@ jobs:
   - get: creds
     params:
       unpack: true
+  - put: concourse-locks
+    params:
+      acquire: true
   - task: test-e2e
     privileged: true
     file: memcached/hack/concourse/task.yml
     params:
-      ClusterProvider: digitalocean
+      ClusterProvider: cncf
       DOCKER_USER: ((docker_user))
       DOCKER_PASS: ((docker_pass))
+    tags: [cncf]
+    ensure:
+      put: concourse-locks
+      params:
+        release: concourse-locks
+
+
+- name: test-memcached-cncf
+  plan:
+  - get: cncf
+    trigger: true
+    version: every
+  - put: cncf
+    params: { path: cncf, status: pending}
+  - get: creds
+    params:
+      unpack: true
+  - put: concourse-locks
+    params:
+      acquire: true
+  - task: test-e2e
+    privileged: true
+    file: cncf/hack/concourse/task.yml
+    input_mapping:
+      memcached: cncf
+    tags: [cncf]
+    params:
+      ClusterProvider: cncf
+      DOCKER_USER: ((docker_user))
+      DOCKER_PASS: ((docker_pass))
+    ensure:
+      put: concourse-locks
+      params:
+        release: concourse-locks
+    on_success:
+      put: cncf
+      params: { path: cncf, status: success}
+    on_failure:
+      put: cncf
+      params: {path: cncf, status: failure}
 
 - name: test-memcached-gke
   plan:
