--- a/glide.yaml
+++ b/glide.yaml
@@ -71,3 +71,7 @@ import:
   version: v1.0.8
 - package: github.com/json-iterator/go
   version: 1.1.5
+- package: golang.org/x/text
+  version: b19bf474d317b857955b12035d2c5acb57ce8b01
+- package: golang.org/x/net
+  version: 1c05540f6879653db88113bc4a2b70aec4bd491f
