--- a/glide.yaml
+++ b/glide.yaml
@@ -12,7 +12,7 @@ import:
   vcs: git
   version: master
 - package: github.com/kubedb/apimachinery
-  version: master
+  version: 0.9.0-beta.1
 - package: github.com/onsi/ginkgo
   version: v1.6.0
 - package: github.com/onsi/gomega
