Add CRDs without observation when operator starts (#94)
xref: https://github.com/kubedb/project/issues/310

--- a/glide.yaml
+++ b/glide.yaml
@@ -5,9 +5,7 @@ import:
 - package: github.com/codeskyblue/go-sh
   version: master
 - package: github.com/coreos/prometheus-operator
-  repo: https://github.com/kmodules/prometheus-operator.git
-  vcs: git
-  version: k-1.12
+  version: v0.25.0
 - package: github.com/jpillora/go-ogle-analytics
 - package: github.com/graymeta/stow
   repo: https://github.com/appscode/stow.git
