--- a/glide.yaml
+++ b/glide.yaml
@@ -87,3 +87,9 @@ import:
   version: de0752318171da717af4ce24d0a2e8626afaeb11
 - package: github.com/davecgh/go-spew
   version: v1.1.1
+- package: github.com/russross/blackfriday
+  version: v1.5.2
+- package: gopkg.in/yaml.v2
+  version: v2.2.1
+- package: github.com/gorilla/websocket
+  version: v1.4.0
