--- a/glide.yaml
+++ b/glide.yaml
@@ -28,9 +28,11 @@ import:
 - package: github.com/json-iterator/go
   version: 1.1.5
 - package: github.com/kubedb/apimachinery
-  version: 0.9.0
+  version: master
 - package: github.com/mailru/easyjson
   version: 2f5df55504ebc322e4d52d34df6a1f5b503bf26d
+- package: github.com/mitchellh/mapstructure
+  version: v1.1.2
 - package: github.com/onsi/ginkgo
   version: v1.6.0
 - package: github.com/onsi/gomega
