Run e2e tests using GitHub actions
Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,7 +21,53 @@ jobs:
 
     - name: Build
       env:
-        DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
+        REGISTRY: kubedbci
+        DOCKER_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+        USERNAME: 1gtm
       run: |
-        docker login docker.pkg.github.com --username kubedb --password ${DOCKER_TOKEN}
-        make push REGISTRY=docker.pkg.github.com/kubedb/memcached
+        docker login --username ${USERNAME} --password ${DOCKER_TOKEN}
+        make push
+
+    - name: Create Kubernetes cluster
+      id: kind
+      uses: engineerd/setup-kind@v0.1.0
+      with:
+        config: hack/e2e/cluster.yaml
+
+    - name: Prepare cluster for testing
+      id: local-path
+      env:
+        DOCKER_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+        USERNAME: 1gtm
+        REGISTRY_SECRET: regcred
+      run: |
+        export KUBECONFIG="$(kind get kubeconfig-path)"
+        echo
+        echo "waiting for nodes to be ready ..."
+        kubectl wait --for=condition=Ready nodes --all --timeout=5m
+        kubectl get nodes
+        echo
+        echo "installing local-path provisioner ..."
+        kubectl delete storageclass --all
+        kubectl apply -f https://github.com/rancher/local-path-provisioner/raw/v0.0.10/deploy/local-path-storage.yaml
+        kubectl wait --for=condition=Ready pods -n local-path-storage --all --timeout=5m
+        echo
+        echo "create docker-registry secret"
+        kubectl create secret docker-registry ${REGISTRY_SECRET} --namespace=kube-system --docker-server=docker.pkg.github.com --docker-username=${USERNAME} --docker-password=${DOCKER_TOKEN}
+
+    - name: Check out installer
+      run: |
+        cd ..
+        git clone https://github.com/kubedb/installer.git
+        cd installer
+        git checkout master
+
+    - name: Run e2e tests
+      env:
+        REGISTRY: kubedbci
+        REGISTRY_SECRET: regcred
+      run: |
+        export KUBECONFIG="$(kind get kubeconfig-path)"
+        make install
+        kubectl get pods --all-namespaces
+        make e2e-tests
